--- a/10tokens_cn.asciidoc
+++ b/10tokens_cn.asciidoc
@@ -710,7 +710,7 @@ truffle(ganache)&gt; <strong>BigNumber { s: 1, e: 3, c: [ 1000 ] }</strong>
 
 ((("ERC20 token standard","issues with ERC20 tokens"))) 采用ERC20通证标准确实具有爆炸性。成千上万个通证项目已经被推了出来，以试验新功能并通过各种“众筹”拍卖和ICO筹集资金。但是，正如我们在将通证转移到合约地址的问题中看到的那样，存在一些潜在的陷阱。
 
-ERC20通证不太明显的问题之一是，它们暴露了通证与以太币本身之间的细微差别。在以接收者地址为目的地的交易中转移以太币的情况下，通证转移发生在特定的通证合约状态内，并且以通证合约为目的地，而不是收件人的地址。通证合约跟踪余额并发布事件。在通证传输中，实际上没有任何交易发送给通证的接收者。取而代之的是，将收件人的地址添加到通证合约本身内的映射中。向以太币发送地址的交易会更改地址的状态。将通证传输到地址的交易只会更改通证合同的状态，而不会更改收件人地址的状态。即使支持ERC20通证的钱包也不会意识到通证余额，除非用户明确将特定通证合约添加到“监视”中。一些钱包会监视最受欢迎的通证合约，以检测其控制地址所持有的余额，但这仅限于现有ERC20合约的一小部分 pass:[<span class="keep-together">合约</span>]。
+ERC20通证不太明显的问题之一是，它们暴露了通证与以太币本身之间的细微差别。在以接收者地址为目的地的交易中转移以太币的情况下，通证转移发生在特定的通证合约状态内，并且以通证合约为目的地，而不是收件人的地址。通证合约跟踪余额并发布事件。在通证传输中，实际上没有任何交易发送给通证的接收者。取而代之的是，将收件人的地址添加到通证合约本身内的映射中。向以太币发送地址的交易会更改地址的状态。将通证传输到地址的交易只会更改通证合约的状态，而不会更改收件人地址的状态。即使支持ERC20通证的钱包也不会意识到通证余额，除非用户明确将特定通证合约添加到“监视”中。一些钱包会监视最受欢迎的通证合约，以检测其控制地址所持有的余额，但这仅限于现有ERC20合约的一小部分 pass:[<span class="keep-together">合约</span>]。
 
 实际上，用户不太可能希望跟踪所有可能的ERC20通证合约中的所有余额。许多ERC20通证比可用通证更像是电子邮件垃圾邮件。他们自动为具有以太坊活动的账户创建余额，以吸引用户。如果你的以太坊地址具有悠久的活动历史，特别是如果它是在预售中创建的，那么你会发现它充满了无处不在的“垃圾”通证。当然，该地址并没有真正充满通证。是其中包含你的地址的通证合约。仅当你用来查看地址的区块浏览器或钱包正在监视这些通证合约时，您才会看到这些余额。
 
