--- a/glossary_cn.asciidoc
+++ b/glossary_cn.asciidoc
@@ -4,7 +4,7 @@
 这个简明词汇表包含了许多与以太坊相关的术语。这些术语在整本书中都会使用，因此请将其添加为书签以供快速参考。
 
 帐户，Account::
-((("account","defined")))包含地址，余额，随机数以及可选存储和代码的对象。帐户可以是合同帐户或外部拥有的帐户（EOA）。
+((("account","defined")))包含地址，余额，随机数以及可选存储和代码的对象。帐户可以是合约帐户或外部拥有的帐户（EOA）。
 
 地址，Address::
 ((("addresses","defined")))通常，这表示可以在区块链上接收（目标地址）或发送（源地址）交易的EOA或智能合约。更具体地说，它是对ECDSA公钥进行Keccak哈希操作后的最右边的160位。
@@ -279,7 +279,7 @@ Swarm::
 ((("Swarm","defined")))一个分布式（P2P）存储网络，与Web3和Whisper一起用于构建DApp。
 
 萨博，Szabo::
-((("szabo, defined")))以太坊系统中货币单位。 1 szabo = 10^12^ wei，10^6^ szabo = 1 ether。是为了致敬尼克·萨博（Nick Szabo），计算机科学家，法学家及密码学家，以数字合约和数字货币的研究而闻名。萨博创建了“智能合同”这个词和概念，最初创建目的是将他所谓的“高度演进”的合同法和惯例算法设计成互联网上陌生人之间的电子商务协议。
+((("szabo, defined")))以太坊系统中货币单位。 1 szabo = 10^12^ wei，10^6^ szabo = 1 ether。是为了致敬尼克·萨博（Nick Szabo），计算机科学家，法学家及密码学家，以数字合约和数字货币的研究而闻名。萨博创建了“智能合约”这个词和概念，最初创建目的是将他所谓的“高度演进”的合约法和惯例算法设计成互联网上陌生人之间的电子商务协议。
 
 Tangerine Whistle::
 ((("Tangerine Whistle")))以太坊区块链的硬分叉，发生在区块2,463,000，以更改某些I/O密集型操作的gas计算并清除拒绝服务的累积状态攻击，利用了这些行动的低耗气成本。
