--- a/appdx-standards-eip-erc_cn.asciidoc
+++ b/appdx-standards-eip-erc_cn.asciidoc
@@ -3,18 +3,18 @@
 == 以太坊标准
 
 [[eips]]
-=== 以太坊改进提案（EIP）
+=== 以太坊改进提案（EIPs）
 
-((("EIPs (Ethereum Improvement Proposals)")))((("Ethereum (generally)","EIPs")))((("Ethereum (generally)","standards")))以太坊改进提案的文件存在 https://github.com/ethereum/EIPs/[]. ((("EIPs (Ethereum Improvement Proposals)","workflow")))工作流程图在<<eip_workflow>>.
+((("EIPs (Ethereum Improvement Proposals)")))((("Ethereum (generally)","EIPs")))((("Ethereum (generally)","standards")))以太坊改进提案的仓库位于 https://github.com/ethereum/EIPs/[]，((("EIPs (Ethereum Improvement Proposals)","workflow")))工作流程图在<<eip_workflow>>描述。
 
 来自 https://github.com/ethereum/EIPs/blob/master/EIPS/eip-1.md[EIP-1]：
 
 ____
-EIP是以太坊改进提案的缩写。 EIP是一个设计文档，可以向以太坊社区提供信息，内容包括描述一个以太坊的新功能，新功能的流程或环境。 EIP应该提供该功能的简要技术规范以及该功能的原理。 EIP作者负责在社区内建立共识并记录不同意见。
+EIP是以太坊改进提案的缩写。EIP是一个设计文档，可以向以太坊社区提供信息，内容包括描述一个以太坊的新功能，新功能的流程或环境。EIP应该提供该功能的简要技术规范以及该功能的原理。EIP作者负责在社区内建立共识并记录不同意见。
 ____
 
 [[eip_workflow]]
-.以太坊改善提案工作流程
+.以太坊改进提案工作流程
 image::{abspath}images/eip_workflow.png["以太坊改进提案工作流程"]
 
 [[eip_table]]
@@ -23,26 +23,26 @@ image::{abspath}images/eip_workflow.png["以太坊改进提案工作流程"]
 .重要的EIP和ERC
 [options="header"]
 |===
-| EIP/ERC＃ | 标题/说明 | 作者 | 层 | 现状 | 创建版本
+| EIP/ERC ＃ | 标题/描述 | 作者 | 层 | 状态 | 创建阶段
 | http://bit.ly/2OVq6qa[EIP-1] | EIP目的和准则 | Martin Becze，Hudson Jameson |注解|定稿|
-| http://bit.ly/2yJtTNa[EIP-2] |家园版本硬分叉的变化 | Vitalik Buterin |核心|定稿|
+| http://bit.ly/2yJtTNa[EIP-2] | 家园版本硬分叉修改 | Vitalik Buterin | 核心 | 定稿|
 
-| http://bit.ly/2Jrx93V[EIP-5] | RETURN和CALL的gas使用量| Christian Reitwiessner |核心|草稿|
-| http://bit.ly/2OYbc2t[EIP-6] |重命名 +SUICIDE+ 操作码|Hudson Jameson|界面 | 定稿|
+| http://bit.ly/2Jrx93V[EIP-5] | `RETURN` 和 `CALL*` 的gas使用 | Christian Reitwiessner |核心|草稿|
+| http://bit.ly/2OYbc2t[EIP-6] | 重命名 +SUICIDE+ 操作码|Hudson Jameson|界面 | 定稿|
 | http://bit.ly/2JxdBeN[EIP-7] | `DELEGATECALL` | Vitalik Buterin |核心|定稿|
 | http://bit.ly/2Q6Oly6[EIP-8] | devp2p 家园版本的向前兼容性要求|Felix Lange |网络|定稿|
-| http://bit.ly/2CUf7WG[EIP-20] | ERC-20通证标准。描述了通证合约可能实现的标准功能，以允许DApp和钱包跨多个接口/ DApp处理通证。方法包括：`totalSupply`，+ balanceOf（address）+，`transfer`，`transferFrom`，`approve`，`allowance`。事件包括：“ Transfer”（在通证传输时触发）， pass:[ <span class="keep-together"><code>Approval</code></span> ]（在调用“ approve”时触发）。 | Fabian Vogelsteller，Vitalik Buterin | ERC |定稿|边境版本
+| http://bit.ly/2CUf7WG[EIP-20] | ERC-20通证标准。描述了通证合约可能实现的标准函数，以允许DApp和钱包跨多接口 / DApp处理通证。方法包括： `totalSupply`，+balanceOf(address)+，`transfer`，`transferFrom`，`approve`， `allowance`。事件包括：`Transfer`（在通证传输时触发），pass:[<span class="keep-together"><code>Approval</code></span>]（在调用 `approve` 时触发）。| Fabian Vogelsteller，Vitalik Buterin | ERC |定稿|边境版本
 | http://bit.ly/2Q6R4YB[EIP-55] |混合大小写校验和地址编码| Vitalik Buterin | ERC |定稿|
 | http://bit.ly/2OgE5la[EIP-86] |交易来源和签名的抽象。为“抽象”帐户安全性和允许用户创建“帐户合约”奠定基础，朝着一个模型发展。在该模型中，所有帐户都是可以支付燃料gas费用的合约，用户可以自定义自己的安全模型，用于执行任何所需的签名验证和随机数检查（而不是使用协议内机制，其中ECDSA和默认随机数方案是保护帐户的唯一“标准”方式，当前已硬编码到交易处理中）。 | Vitalik Buterin |核心|递延（将被替换）|君士坦丁堡
-| http://bit.ly/2QedSFC[EIP-96] | Blockhash和状态根更改。在状态中存储区块哈希散列值以减少处理“ BLOCKHASH”操作码时协议的复杂性和客户端的复杂实现。扩展了向后扩展块哈希检查的范围，其副作用是在区块编号非常远的区块之间创建直接链接，以促进更高效的初始轻节点同步。 | Vitalik Buterin |核心|推迟|君士坦丁堡
+| http://bit.ly/2QedSFC[EIP-96] | Blockhash和状态根更改。在状态中存储区块哈希散列值以减少处理 `BLOCKHASH` 操作码时协议的复杂性和客户端的复杂实现。扩展了向后扩展块哈希检查的范围，其副作用是在区块编号非常远的区块之间创建直接链接，以促进更高效的初始轻节点同步。 | Vitalik Buterin |核心|推迟|君士坦丁堡
 | http://bit.ly/2AC05DM[EIP-100] |将难度调整更改为目标平均出块时间，包括叔块。 | Vitalik Buterin |核心|定稿|大都会拜占庭
 | http://bit.ly/2Jr1zDv[EIP-101] |宁静版本中的加密货币和加密抽象。以太坊可以将以太坊和子代币进行类似的处理，从而将以太坊抽象化，进而降低定制策略账户（例如多重签名）所需的间接级别，并通过降低最小共识实现的复杂性来净化底层的以太坊协议。 | Vitalik Buterin |活跃|宁静功能|宁静Casper版本
 | http://bit.ly/2Q5sdEv[EIP-105] |二进制分片加合约调用语义。 “分片架构” EIP允许使用二叉树分片机制对以太坊事务进行并行化处理，并为以后的分片方案奠定基础。研究正在进行中；参见 https://github.com/ethereum/sharding[]。 | Vitalik Buterin |活跃|宁静功能|宁静Casper版本
 | http://bit.ly/2yG2Dzi[EIP-137] |以太坊域名服务-规范|Nick Johnson | ERC |定稿|
-| http://bit.ly/2yJtWZm[EIP-140] |新操作码： +REVERT+ 。添加`REVERT`操作码指令，该指令将停止执行并回滚EVM执行状态的变动，而不会消耗所有提供的燃料gas（相反，合约仅需支付内存）或丢失日志，并向调用方返回指向内存位置的指针，并带有错误代码或消息。 | Alex Beregszaszi，Nikolai Mushegian |核心|定稿|大都会拜占庭版本
+| http://bit.ly/2yJtWZm[EIP-140] |新操作码：+REVERT+。添加 `REVERT` 操作码指令，该指令将停止执行并回滚EVM执行状态的变动，而不会消耗所有提供的燃料gas（相反，合约仅需支付内存）或丢失日志，并向调用方返回指向内存位置的指针，并带有错误代码或消息。 | Alex Beregszaszi，Nikolai Mushegian |核心|定稿|大都会拜占庭版本
 | http://bit.ly/2CQMXfe[EIP-141] |指定的无效EVM指令| Alex Beregszaszi |核心|定稿|
 | http://bit.ly/2qhKz9Y[EIP-145] | EVM中的按位移位指令 | Alex Beregszaszi，PawełBylica |核心|推迟|
-| http://bit.ly/2qhxflQ[EIP-150] | 对IO操作过多的gas成本变化| Vitalik Buterin |核心|定稿|
+| http://bit.ly/2qhxflQ[EIP-150] | 对IO重度操作的gas成本修订 | Vitalik Buterin |核心|定稿|
 | http://bit.ly/2CQUgne[EIP-155] |简单的重放攻击防护。重放攻击允许使用EIP-155之前的以太坊节点或客户端进行的任何交易都经过签名，以使其有效并同时在以太坊和以太坊经典链上执行。 | Vitalik Buterin |核心|定稿|家园版本
 | http://bit.ly/2JryBmT[EIP-158] |状态结算| Vitalik Buterin |核心|取消|
 | http://bit.ly/2CR6VGY[EIP-160] | EXP操作费用增加| Vitalik Buterin |核心|定稿|
@@ -59,9 +59,9 @@ image::{abspath}images/eip_workflow.png["以太坊改进提案工作流程"]
 | Vitalik Buterin，Christian Reitwiessner|核心|定稿|大都会拜占庭
 | http://bit.ly/2DdTCRN[EIP-198] |大整数模幂。预编译后可使用RSA签名验证和其他加密应用程序。
 | Vitalik Buterin |核心|定稿|大都会拜占庭
-| http://bit.ly/2qjYJr3[EIP-211] |新的操作码：RETURNDATASIZE和RETURNDATACOPY。增加了对在EVM中返回可变长度值的支持，并具有简单的增加燃料gas的功能，并使用新的操作码RETURNDATASIZE和RETURNDATACOPY对调用操作码进行了最小的更改。处理类似于现有的“ calldata”，即在调用之后，返回数据将保留在虚拟缓冲区内，调用者可以从该缓冲区中将其（或其部分）复制到内存中，并在下一次调用时覆盖该缓冲区。
+| http://bit.ly/2qjYJr3[EIP-211] |新的操作码： `RETURNDATASIZE` 和 `RETURNDATACOPY`。增加了对在EVM中返回可变长度值的支持，并具有简单的增加燃料gas的功能，并使用新的操作码 `RETURNDATASIZE` 和 `RETURNDATACOPY` 对调用操作码进行了最小的更改。处理类似于现有的 `calldata`，即在调用之后，返回数据将保留在虚拟缓冲区内，调用者可以从该缓冲区中将其（或其部分）复制到内存中，并在下一次调用时覆盖该缓冲区。
 |Christian Reitwiessner |核心|定稿|大都会拜占庭
-| http://bit.ly/2OgV0Eb[EIP-214] |新的操作码：`STATICCALL`。允许对自身或其他合约进行无状态更改的调用，同时不允许在调用过程中（及其子调用，如果存在）对状态进行任何修改，以提高智能合约的安全性，并确保开发人员调用不会产生重入错误。调用将STATIC标志设置为true的子合约以执行子合约，导致在STATIC为true的执行实例中进行状态更改操作的任何尝试均引发异常，并在调用后重置标志返回。 | Vitalik Buterin，, Christian Reitwiessner|核心|定稿|大都会拜占庭版本
+| http://bit.ly/2OgV0Eb[EIP-214] |新的操作码：`STATICCALL`。允许对自身或其他合约进行无状态更改的调用，同时不允许在调用过程中（及其子调用，如果存在）对状态进行任何修改，以提高智能合约的安全性，并确保开发人员调用不会产生重入错误。调用将 `STATIC` 标志设置为 `true` 的子合约以执行子合约，导致在 `STATIC` 为 `true` 的执行实例中进行状态更改操作的任何尝试均引发异常，并在调用后重置标志返回。 | Vitalik Buterin，, Christian Reitwiessner|核心|定稿|大都会拜占庭版本
 | http://bit.ly/2JssHlJ[EIP-225] | Rinkeby测试网使用授权证明PoA，其中仅由受信任的签名者开采区块。 | PéterSzilágyi| | |家园版本
 | http://bit.ly/2yPBavd[EIP-234] |将`blockHash`添加到JSON-RPC过滤器选项| Micah Zoltu |界面 | 草稿|
 
@@ -72,7 +72,7 @@ image::{abspath}images/eip_workflow.png["以太坊改进提案工作流程"]
 | http://bit.ly/2qjYX1n[EIP-681] |交易请求的URL格式| Daniel A. Nagy |界面|草稿|
 
 | http://bit.ly/2OYgE5n[EIP-649] |都市难度炸弹延迟和出块奖励减少。将冰河世纪（又名难度炸弹）延迟1年，并将出块奖励从5个以太币降低至3个以太币。 | Afri Schoedon，Vitalik Buterin |核心|定稿|大都会拜占庭
-| http://bit.ly/2RoGCvH[EIP-658] |将交易状态代码嵌入交易收据中。将指示成功或失败状态的状态字段获取并嵌入到交易发起者的交易收据中，因为在EIP-140中引入“ REVERT”操作码后，再也无法假定消耗了所有燃料gas后，交易就会失败。
+| http://bit.ly/2RoGCvH[EIP-658] |将交易状态代码嵌入交易收据中。将指示成功或失败状态的状态字段获取并嵌入到交易发起者的交易收据中，因为在EIP-140中引入 `REVERT` 操作码后，再也无法假定消耗了所有燃料gas后，交易就会失败。
 |Nick Johnson|核心|定稿|大都会拜占庭
 | http://bit.ly/2Ogwpzs[EIP-706] | DEVp2p快速压缩| PéterSzilágyi|网络|定稿|
 | http://bit.ly/2AAkCIP[EIP-721] | ERC-721不可替代通证标准。一种标准API，允许智能合约作为唯一的可交易不可交易通证（NFT）进行操作，可以在标准钱包中进行跟踪，并在交易所作为有价资产进行交易，类似于ERC20。 CryptoKitties是在以太坊生态系统中第一个被广泛采用的数字NFT实现。 | William Entriken，Dieter Shirley，Jacob Evans，Nastassia Sachs |标准|草稿|
